fix glow transition on types, add card size change on mobile

--- a/220927_week8/pokedex2/style.css
+++ b/220927_week8/pokedex2/style.css
@@ -48,7 +48,8 @@ h1 {
 }
 
 #search {
-  min-width: 300px;
+  max-width: 300px;
+  min-width: 95vw;
   font-family: inherit;
   font-size: inherit;
   padding: 0.5rem 1rem;
@@ -111,7 +112,7 @@ main {
   width: var(--card-width);
   border-radius: var(--border-rad);
   box-shadow: 2px 1px 2px var(--dark-color-alpha);
-  transition: 0.25s;
+  transition: 0.5s;
 }
 .card .image {
   background: var(--light-color-alpha);
@@ -123,7 +124,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: 0.5s;
+  transition: 0.25s;
 }
 .card:hover {
   box-shadow: 0 0 5px white;
@@ -171,6 +172,7 @@ main {
   position: absolute;
   top: 0.4rem;
   left: 0.4rem;
+  z-index: 1;
 }
 
 .gen {
@@ -242,5 +244,12 @@ footer {
   display: none;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 700px) {
+  :root {
+    --card-height: 200px;
+    --card-width: 150px;
+  }
+  .card-container {
+    gap: 1rem;
+  }
 }
